SCSS/about.scss
body {
  background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)),
    url(../images/background-mountains_1920x1077.jpg);
  background-size: cover;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: center;
  color: whitesmoke;
}
footer p {
  color: black;
}

.about-page {
  min-height: 100vh;
  margin-top: 10vh;
  display: flex;
  flex-flow: column;
}

h1 {
  text-align: center;
}

h2 {
  padding-bottom: 30px;
  text-align: center;
}

.about-info {
  padding: 10px;
}

.left {
  padding-right: 10px;
  font-weight: 700;
}

.personal {
  position: relative;
}

.break {
  margin: 20px;
}

.contact-link {
  display: flex;
  justify-content: center;
  align-self: center;
  margin-bottom: 2em;
  width: max-content;
}

@media only screen and (min-width: 900px) {
  .about-page {
    margin-bottom: 5vh;
  }

  .about-info {
    display: grid;
    grid-template-columns: 10vw 10vw 1fr 1fr 10vw 10vw;
    grid-gap: 5px;
  }

  .centered-heading {
    margin-top: 50px;
    grid-column: 1 / 7;
    // width: 100%;
    text-align: center;
  }

  .left {
    grid-column: 3/4;
    justify-self: right;
  }

  .break {
    margin: 30px;
  }
}
@media only screen and (min-width: 2000px) {
  body {
    background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)),
      url(../images/background-mountains_3840x2154.jpg);
  }
}

